@@ -2,7 +2,7 @@ package com.example.contractservice.contract.service;
 
 import static com.example.contractservice.contract.domain.exception.ContractErrorCode.*;
 
-import com.example.contractservice.common.util.UriConstructor;
+import com.example.contractservice.common.util.feign.MemberClient;
 import com.example.contractservice.contract.controller.dto.response.ContractDetailResponse;
 import com.example.contractservice.contract.controller.dto.response.ContractListWithCursorResponse;
 import com.example.contractservice.contract.domain.Contract;
@@ -11,15 +11,10 @@ import com.example.contractservice.contract.domain.vo.ContractInfo;
 import com.example.contractservice.contract.repository.ContractRepository;
 import com.example.contractservice.contract.service.dto.request.ContractDetailRequest;
 import com.example.contractservice.contract.service.dto.request.ContractReadCursorRequest;
-import com.example.contractservice.contract.service.dto.response.MemberInfoResponse;
 import com.example.contractservice.contract.service.dto.response.MemberInfoResponse.MemberInfo;
-import java.net.URI;
-import java.util.Collections;
 import java.util.List;
-import java.util.Optional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
-import org.springframework.web.client.RestTemplate;
 
 @Service
 @RequiredArgsConstructor
@@ -29,8 +24,7 @@ public class ContractReadService {
     private static final int CONTRACT_PARTICIPATION_COUNT = 2;
 
     private final ContractRepository contractRepository;
-    private final UriConstructor uriConstructor;
-    private final RestTemplate restTemplate;
+    private final MemberClient memberClient;
 
     public ContractListWithCursorResponse findAllBy(ContractReadCursorRequest request) {
         List<Contract> contracts = contractRepository.findAllBy(request.memberCode(), request.cursor(),
@@ -41,13 +35,12 @@ public class ContractReadService {
 
     public ContractDetailResponse findDetailBy(ContractDetailRequest request) {
         Contract contract = contractRepository.findByCode(request.contractCode());
+        ContractInfo contractInfo = contract.getInfo();
 
         validateMember(request.memberCode(), contract);
 
-        URI memberInfoUrl = uriConstructor.createMemberInfoUrl(Collections.singletonList(request.memberCode()));
-        List<MemberInfo> memberInfos = Optional.ofNullable(
-                        restTemplate.getForObject(memberInfoUrl, MemberInfoResponse.class))
-                .orElseThrow(() -> new ContractException(INVALID_MEMBER)).members();
+        List<MemberInfo> memberInfos = memberClient.getMemberInfo(List.of(contractInfo.clientCode(), contractInfo.freelancerCode())).data()
+                .internalMemberInfos();
 
         if (memberInfos.size() != CONTRACT_PARTICIPATION_COUNT) {
             throw new ContractException(INVALID_MEMBER_COUNT);
@@ -56,8 +49,8 @@ public class ContractReadService {
         MemberInfo firstMember = memberInfos.get(0);
         MemberInfo secondMember = memberInfos.get(1);
 
-        String clientName = firstMember.code().equals(contract.getInfo().clientCode()) ? firstMember.name() : secondMember.name();
-        String freelancerCode = firstMember.code().equals(contract.getInfo().freelancerCode()) ? secondMember.name() : firstMember.name();
+        String clientName = firstMember.memberCode().equals(contractInfo.clientCode()) ? firstMember.nickName() : secondMember.nickName();
+        String freelancerCode = secondMember.memberCode().equals(contractInfo.freelancerCode()) ? secondMember.nickName() : firstMember.nickName();
 
         return ContractDetailResponse.of(contract, clientName, freelancerCode);
     }
